--- a/CleanViewModels/packages.config
+++ b/CleanViewModels/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Assisticant" version="1.1.4.1" targetFramework="net45" />
   <package id="itzben" version="1.1.1" targetFramework="net45" />
 </packages>
